# tech-page

./: .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: _base.html
templates/pages/: home.html
templates/posts/: delete_post.html  new_post.html  post_detail.html  post_draft_list.html  post_list.html  update_post.html
