[tool.poetry]
name = "tech-page"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.11.1"
django-debug-toolbar = "^3.2"
whitenoise = "^5.2.0"
black = "^20.8b1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
